fixed footer bar from overlapping content

--- a/PopcornPicksClient/src/app/footer/footer.component.css
+++ b/PopcornPicksClient/src/app/footer/footer.component.css
@@ -1,8 +1,7 @@
 mat-toolbar
 {
   background-color:rgb(217, 194, 20);
-  position: fixed;
-  bottom:0%;
+
 }
 
 .tmdb
